fix alignment issues

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -86,7 +86,7 @@ p {
 #section-hero {
     background-color: #43434A;
     padding: $m192 $m128;
-    color: $white;
+    color: #EAFBF9;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -138,7 +138,7 @@ p {
 #section-registration {
     background-color: #5B5CA6;
     padding: $m192 $m128;
-    color: $white;
+    color: #EAFBF9;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -267,6 +267,7 @@ p {
 
     h1 {
         margin-bottom: $m24;
+        color: #EAFBF9
     }
 
     p {
@@ -354,11 +355,12 @@ footer {
             text-align: end;
 
             p {
-                width: $w3Mobile;
+                width: $w4Mobile;
             }
         }
 
         .hero-img {
+            margin-top: $m16Mobile;
             width: $w3Mobile;
         }
 
@@ -398,6 +400,7 @@ footer {
         flex-direction: column;
         padding: $m96Mobile $m16Mobile;
         align-items: flex-start;
+        text-align: center;
 
         .registration-container {
             width: $w4Mobile;
@@ -427,6 +430,7 @@ footer {
             width: $w2Mobile;
             margin: 0;
             margin-bottom: $m16Mobile;
+            align-self: center;
         }
     }
 
@@ -446,6 +450,7 @@ footer {
         }
 
         h1 {
+            width: 100%;
             margin-bottom: $m16Mobile;
         }
 
@@ -465,6 +470,7 @@ footer {
 
     #section-faq {
         padding: $m96Mobile $m16Mobile;
+        padding-top: 0;
 
         h1 {
             margin-bottom: $m16Mobile;
